--- a/tabla.html
+++ b/tabla.html
@@ -22,8 +22,6 @@
         <label for="puesto">Puesto:</label>
         <input type="text" id="puesto" required>
     
-        <label for="foto">Foto:</label>
-        <input type="file" id="foto">
     
         <button type="button" onclick="agregarTrabajador()">Agregar Trabajador</button>
     </form>
@@ -37,7 +35,7 @@
         </tr>
     </table>
 
-<script src="/index.js"></script>
+<script src="/funciones.js"></script>
 
 </body>
 </html>
