--- a/tabla.html
+++ b/tabla.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 
 
-    <title>Formulario de Trabajadores - Pierop</title>
+    <title>Piero</title>
 
 </head>
 <body>
     <div id="app">
-        <h1>Registro de Trabajadores en Continental</h1>
+        <h1>Registro de Trabajadores Continental</h1>
     </div>
 
     <form id="workerForm">
